# pali-translation

./: .gitignore  README.md  bodhikatta.md  db_search_example.py  grammar.py  lookup.py  main.py  models.py  pyproject.toml  stranslate.py  stranslate_1.py  stranslate_2.py  translate.py
.streamlit/: secrets.toml
dpd/: clean_machine.py  db_helpers.py  degree_of_completion.py  lemma_traditional.py  link_generator.py  meaning_construction.py  models.py  niggahitas.py  sbs_table_functions.py  translit.py
