[project]
name = "pali-translation"
version = "0.1.0"
description = "Pali Translation Tools using dpd.db"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aksharamukha>=2.3",
    "dotenv>=0.9.9",
    "google-api-core>=2.24.2",
    "google-genai>=1.14.0",
    "inquirer>=3.4.0",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.45.0",
]
